[gd_scene load_steps=13 format=3 uid="uid://cmb4bbhodejj3"]

[ext_resource type="Script" uid="uid://c1xmcteb1q4xp" path="res://node_2d.gd" id="1_5jc4t"]
[ext_resource type="Texture2D" uid="uid://nvahvnume514" path="res://enemies/Red Slime Spritesheet.png" id="2_4l1t8"]
[ext_resource type="PackedScene" uid="uid://ccudffb7focvo" path="res://Scripts/death.tscn" id="3_4l1t8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ppcr1"]
atlas = ExtResource("2_4l1t8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayke"]
atlas = ExtResource("2_4l1t8")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2002g"]
atlas = ExtResource("2_4l1t8")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bratd"]
atlas = ExtResource("2_4l1t8")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b0gg"]
atlas = ExtResource("2_4l1t8")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_da4t2"]
atlas = ExtResource("2_4l1t8")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jrxk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppcr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2002g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bratd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b0gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da4t2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ppcr1"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l1t8"]
size = Vector2(0.35661003, 0.3846221)

[node name="Slime" type="Node2D"]
script = ExtResource("1_5jc4t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jrxk1")
autoplay = "default"
frame_progress = 0.26084903

[node name="Death" parent="." instance=ExtResource("3_4l1t8")]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_ppcr1")

[node name="Area2D" type="Area2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(0, -9)
scale = Vector2(1.1643506, 1.0400289)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.4901161e-08, 3.846047)
shape = SubResource("RectangleShape2D_4l1t8")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-7, 0)

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
